--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -4,7 +4,7 @@
     <Title>Terradue.Stars</Title>
     <Description>Stars is a set of services for working with Spatio Temporal Catalog such as STAC but not only</Description>
     <Version>2.0.0</Version>
-    <VersionSuffix>beta.3</VersionSuffix>
+    <VersionSuffix>beta.4</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <AssemblyName>Terradue.Stars.Services</AssemblyName>
     <PackageId>Terradue.Stars</PackageId>
@@ -53,12 +53,12 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
-      <!-- <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
-      <IncludeAssets>Terradue.Stars.Interface.dll</IncludeAssets> -->
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>Terradue.Stars.Interface.dll</IncludeAssets>
     </ProjectReference>
     <ProjectReference Include="../Stars.Geometry/Terradue.Stars.Geometry.csproj">
-      <!-- <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
-      <IncludeAssets>Terradue.Stars.Geometry.dll</IncludeAssets> -->
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>Terradue.Stars.Geometry.dll</IncludeAssets>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
