--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -4,7 +4,7 @@
     <Title>Terradue.Stars</Title>
     <Description>Stars is a set of services for working with Spatio Temporal Catalog such as STAC but not only</Description>
     <Version>2.0.0</Version>
-    <VersionSuffix>beta.8</VersionSuffix>
+    <!-- <VersionSuffix>beta.8</VersionSuffix> -->
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <AssemblyName>Terradue.Stars.Services</AssemblyName>
     <PackageId>Terradue.Stars</PackageId>
