--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -24,12 +24,12 @@
     <NoWarn>$(NoWarn);NU1605</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.*"/>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.0.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.*"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.0.*" />
     <PackageReference Include="System.IO.Abstractions" Version="16.1.25" />
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0" />
@@ -47,6 +47,7 @@
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
     <PackageReference Include="HttpClient.Caching" Version="1.2.*"/>
+    <PackageReference Include="Humanizer" Version="2.8.26"/>
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
