--- a/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
+++ b/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="GeoJSON.Net" Version="1.2.19"/>
