--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -4,6 +4,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <!-- <NoWarn>NU1603</NoWarn> -->
     <NoWarn>$(NoWarn);NU1605</NoWarn>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.*" />
