--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -22,6 +22,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <LangVersion>8.0</LangVersion>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.*" />
