--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="MimeTypes" Version="2.0.2"/>
     <PackageReference Include="Terradue.OpenSearch.SciHub" Version="1.19.*"/>
     <PackageReference Include="Terradue.OpenSearch.Asf" Version="1.2.*"/>
+    <PackageReference Include="Terradue.OpenSearch.Usgs" Version="1.6.*"/>
     <PackageReference Include="Terradue.OpenSearch.GeoJson" Version="1.4.5"/>
     <PackageReference Include="Terradue.GeoJson" Version="1.12.1"/>
     <PackageReference Include="MaxRev.Gdal.Core" Version="3.3.3.110"/>
@@ -51,6 +52,9 @@
   </ItemGroup>
   <!-- <ItemGroup>
     <ProjectReference Include="../../../../sugar/Terradue.OpenSearch.SciHub/Terradue.OpenSearch.SciHub/Terradue.OpenSearch.SciHub.csproj" />
+  </ItemGroup> -->
+  <!-- <ItemGroup>
+    <ProjectReference Include="../../../../sugar/Terradue.OpenSearch.Usgs/Terradue.OpenSearch.Usgs/Terradue.OpenSearch.Usgs.csproj" />
   </ItemGroup> -->
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
