--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -671,12 +671,12 @@
             "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/net6.0/Stars.dll",
             "args": [
                 "copy",
-                "s3://cpe-production-processing-results/wf-5df66150-cbc2-11ec-b82b-0a580a8206e0/catalog.json",
+                "s3://cpe-production-catalog/calls/call-890/calibratedDatasets/S2A_MSIL2A_20220801T055651_N0400_R091_T42RUR_20220801T092156-calibrated/S2A_MSIL2A_20220801T055651_N0400_R091_T42RUR_20220801T092156-calibrated.json",
                 "-v",
                 "-r",
                 "4",
-                "--empty",
-                "--skip-assets",
+                "-af",
+                "nir08",
                 "--output",
                 "/tmp/stars"
             ],
