Gaofen4 MetadataExtractor updated with IRS and ms values ESACPE-159

--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -62,5 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="stars-data.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
+    <Content Include="Model/Metadata/Gaofen1-2-4/GF4_bands.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
   </ItemGroup>
 </Project>
