--- a/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
+++ b/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0"/>
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="SharpKml.Core" Version="5.1.3"/>
+    <PackageReference Include="DotNetStac" Version="1.6.*" />
   </ItemGroup>
 </Project>
