--- a/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
+++ b/src/Stars.Geometry/Terradue.Stars.Geometry.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1"/>
     <PackageReference Include="SharpKml.Core" Version="5.1.3"/>
     <PackageReference Include="DotNetStac" Version="1.6.*" />
+    <PackageReference Include="NetTopologySuite" Version="2.5.*" />
   </ItemGroup>
 </Project>
