--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.0.*" />
-    <PackageReference Include="DotNetStac" Version="1.6.*" />
+    <PackageReference Include="DotNetStac" Version="1.6.6" />
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
