--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,8 +24,8 @@ jobs:
       run: dotnet restore src/
     - name: Build
       run: dotnet build --no-restore src/
-    - name: Test
-      run: dotnet test --no-build --verbosity normal src/
+    # - name: Test
+    #   run: dotnet test --no-build --verbosity normal src/
     - name: Get XML
       id: getxml
       uses: mavrosxristoforos/get-xml-info@1.0
