--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -27,7 +27,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.*" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.*"/>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.*" />
+    <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.0.*" />
     <PackageReference Include="System.IO.Abstractions" Version="16.1.25" />
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
@@ -38,15 +39,15 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="MimeTypes" Version="2.0.2" />
     <PackageReference Include="DotNetZip" Version="1.15.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.13.*"/>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.9.*"/>
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.*"/>
-    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.2.*"/>
-    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*"/>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.13.*" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.*" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.*" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.2.*" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
-    <PackageReference Include="HttpClient.Caching" Version="1.2.*"/>
-    <PackageReference Include="Humanizer" Version="2.8.26"/>
+    <PackageReference Include="HttpClient.Caching" Version="1.2.*" />
+    <PackageReference Include="Humanizer" Version="2.8.26" />
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
