--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,10 +24,6 @@ jobs:
       run: dotnet restore src/
     - name: Build
       run: dotnet build --no-restore src/
-    - name: Console Test
-      run: dotnet test --no-build --verbosity normal src/Stars.Console.Tests/Stars.Console.Tests.csproj
-    - name: Services Test
-      run: dotnet test --no-build --verbosity normal src/Stars.Tests/Stars.Tests.csproj
-    - name: Data Test
-      run: dotnet test --no-build --verbosity normal src/Stars.Data.Tests/Terradue.Stars.Data.Tests.csproj
+    - name: Test
+      run: dotnet test --no-build --verbosity normal src/
   
