--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         global-json-file: global.json
     - name: Install dependencies (hdf5)
-      run: apt install hdf5-tools -y
+      run: sudo apt install hdf5-tools -y
     - name: Restore dependencies
       run: dotnet restore src/
     - name: Build
