--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -727,6 +727,40 @@
             }
         },
         {
+            "name": "Copy from ASF",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/net6.0/Stars.dll",
+            "args": [
+                "copy",
+                "https://catalog.terradue.com/sentinel1/search?uid=S1A_IW_SLC__1SDV_20211227T163210_20211227T163237_041197_04E53D_3B0C",
+                "-v",
+                "-r",
+                "4",
+                "-si",
+                "ASF",
+                "--empty",
+                "--stop-on-error",
+                "--output",
+                "/tmp/stars"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            "env": {
+                // "AWS__Profile": "scw",
+                // "AWS__ServiceURL": "https://s3.pl-waw.scw.cloud",
+                // "AWS__Region": "pl-waw",
+                // "AWS__AuthenticationRegion": "pl-waw",
+            },
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false,
+            "logging": {
+                "moduleLoad": false
+            }
+        },
+        {
             "name": "Copy from creodias",
             "type": "coreclr",
             "request": "launch",
