--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -23,6 +23,7 @@
         <DebugType>embedded</DebugType>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="CsvHelper" Version="30.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.*" />
         <PackageReference Include="Html2Markdown" Version="3.3.1.407" />
         <PackageReference Include="Markdig" Version="0.22.0" />
