--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,5 +43,5 @@ jobs:
     - name: Install dotnet format
       run: dotnet tool update -g dotnet-format
     - name: Check Format
-      run: dotnet format --verify-no-changes --severity warn src/
+      run: dotnet format --verify-no-changes --severity error src/
   
