--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.0.*" />
-    <PackageReference Include="DotNetStac" Version="1.6.*" />
+    <PackageReference Include="DotNetStac" Version="1.7.*" />
+    <!-- <PackageReference Include="DotNetStac.Api" Version="1.0.0-beta.2" /> -->
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
+    <ProjectReference Include="../../../../sugar/DotNetStac.Api/src/Stac.Api/Stac.Api.csproj" />
   </ItemGroup>
 </Project>
