--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0" />
     <PackageReference Include="DotNetStac" Version="1.7.*" />
+    <PackageReference Include="DotNetStac.Api" Version="1.0.0-beta.5" />
     <PackageReference Include="Html2Markdown" Version="3.3.1.407" />
     <PackageReference Include="Terradue.Metadata.EarthObservation" Version="1.6.7" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
@@ -51,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
-    <ProjectReference Include="../../../../sugar/DotNetStac.Api/src/Stac.Api/Stac.Api.csproj" />
+    <!-- <ProjectReference Include="../../../../sugar/DotNetStac.Api/src/Stac.Api/Stac.Api.csproj" /> -->
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Stars.Interface/Terradue.Stars.Interface.csproj">
