--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,9 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        global-json-file: global.json
+        dotnet-version: | 
+            6.0.x
+            7.0.x
     - name: Install dependencies (hdf5)
       run: sudo apt install hdf5-tools -y
     - name: Restore dependencies
