--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: | 
-            6.0.x
-            7.0.x
+        global-json-file: global.json
     - name: Make packages
       run: |
         dotnet tool restore
