--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -44,7 +44,7 @@
     <PackageReference Include="AWSSDK.S3" Version="3.7.9.*" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.*" />
     <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.2.*" />
-    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.0" />
     <PackageReference Include="HttpClient.Caching" Version="1.2.*" />
