--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ src/global.json
 
 build/
 package-lock.json
+src/Stars.Data.Tests/Resources/BKA/L1C/data/4089411-0220-PAN-C-1-1-1139831-160712T150120-BR
