--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     ],
     "omnisharp.disableMSBuildDiagnosticWarning": true,
     "dotnet-test-explorer.testProjectPath": "**/*Tests.@(csproj|vbproj|fsproj)",
-    "jira-plugin.workingProject": "DATAAUTHOR",
+    "jira-plugin.workingProject": "",
     "dotnet.defaultSolution": "src/Terradue.Stars.sln"
 }
