--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,22 @@
             "stopAtEntry": false
         },
         {
+            "name": "Display Copy Help",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/net6.0/Stars.dll",
+            "args": [
+                "copy",
+                "-h"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": "Display Plugins",
             "type": "coreclr",
             "request": "launch",
