--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "template": "keepachangelog",
     "unreleased": false,
     "hideEmptyReleases": true,
-    "ignoreCommitPattern": "^(.{0,5}|.*bump.*|ready.*|.*changelog.*|.*formatting.*|.*typo.*)$",
+    "ignoreCommitPattern": "^(.{0,5}|.*bump.*|ready.*|.*changelog.*|.*formatting.*|.*typo.*|chore:.*)$",
     "releaseSummary": true
   }
 }
