--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -39,6 +39,7 @@
         <PackageReference Include="MaxRev.Gdal.Core" Version="3.3.3.110" />
         <PackageReference Include="MaxRev.Gdal.LinuxRuntime.Minimal" Version="3.3.3.120" />
         <PackageReference Include="AWSSDK.Core" Version="3.7.13.*" />
+        <PackageReference Include="SharpKml.Core" Version="5.1.3" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj">
