--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -33,7 +33,7 @@
         <PackageReference Include="MimeTypes" Version="2.0.2" />
         <PackageReference Include="Terradue.OpenSearch.SciHub" Version="1.48.*"/>
         <PackageReference Include="Terradue.OpenSearch.Asf" Version="1.4.*" />
-        <PackageReference Include="Terradue.OpenSearch.Usgs" Version="1.8.0" />
+        <PackageReference Include="Terradue.OpenSearch.Usgs" Version="1.8.*" />
         <PackageReference Include="Terradue.OpenSearch.GeoJson" Version="1.4.5" />
         <PackageReference Include="Terradue.GeoJson" Version="1.12.1" />
         <PackageReference Include="MaxRev.Gdal.Core" Version="3.3.3.110" />
